feat: complete backend API
Express.js + PostgreSQL + Prisma backend:

Routes:
- /auth - Register, login, Apple/Google OAuth, token refresh
- /users - Profile management, public profiles
- /lessons - Course content, exercises, completion tracking
- /progress - CEFR levels, stats, streaks, leaderboards
- /vocabulary - SRS-based word learning (SM-2 algorithm)
- /subscriptions - Apple IAP, Google Play, product catalog
- /social - Friends, achievements, user search
- /recipes - Kitchen feature with language learning

Database Schema (Prisma):
- Users with OAuth providers
- Subscription tiers (Free/Premium/Family/Lifetime)
- Progress tracking per language
- SRS items for spaced repetition
- Achievements and gamification
- Social features (friendships)
- Transactions for payments

Features:
- JWT authentication with refresh tokens
- Rate limiting and security headers
- Webhook endpoints for payment notifications
- Seed script for initial data

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,28 @@
+# Lingua API Environment Variables
+
 # Server
 PORT=3000
-NODE_ENV=production
+NODE_ENV=development
 
-# MongoDB (use MongoDB Atlas for production)
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/farsi-learning?retryWrites=true&w=majority
+# Database (PostgreSQL)
+DATABASE_URL="postgresql://user:password@localhost:5432/lingua?schema=public"
 
-# JWT
-JWT_SECRET=your-very-secure-secret-key-min-32-chars
-JWT_EXPIRE=7d
+# Authentication
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
 
-# CORS (add your app domains)
-CORS_ORIGIN=*
+# CORS (comma-separated origins)
+CORS_ORIGINS=http://localhost:3000,http://localhost:19006
+
+# Apple Sign In (for production)
+APPLE_TEAM_ID=
+APPLE_KEY_ID=
+APPLE_PRIVATE_KEY=
+
+# Google Sign In (for production)
+GOOGLE_CLIENT_ID=
+
+# Apple App Store (for IAP verification)
+APPLE_SHARED_SECRET=
+
+# Google Play (for purchase verification)
+GOOGLE_PLAY_SERVICE_ACCOUNT_KEY=
