--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,37 @@
 {
-  "name": "farsi-learning-backend",
-  "version": "1.0.0",
-  "description": "Backend API for Farsi learning app",
-  "main": "server.js",
+  "name": "lingua-api",
+  "version": "2.0.0",
+  "description": "Lingua Language Learning API",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed": "node prisma/seed.js",
+    "lint": "eslint src/",
+    "test": "jest"
   },
-  "keywords": ["farsi", "learning", "api"],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
+    "@prisma/client": "^5.0.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "express-validator": "^7.0.1"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.0.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "nodemon": "^3.0.0",
+    "prisma": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
